--- a/style.scss
+++ b/style.scss
@@ -301,7 +301,7 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
   }
   @include lg-mobile {
     width: 100%;
-    font-size: 15px;
+    font-size: 15.8px;
   }
   @include mobile {
    padding: 30px;
@@ -355,7 +355,9 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
   }
   p {
   font-size: 18.5px;
-
+  @include lg-mobile {
+    font-size: 17.1px;
+  }
 }
 	
 ul {
