--- a/style.scss
+++ b/style.scss
@@ -361,11 +361,18 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
 }
 	
 ul {
-margin-bottom: 8px;
-margin-left: 10px;
+margin-bottom: 18px;
+margin-left: 20px;
 padding: 4px;
 
 }
+
+ol {
+margin-bottom: 18px;
+margin-left: 20px;
+padding: 4px;	
+}
+
 li {padding: 4px;}
 
   blockquote {
@@ -508,7 +515,6 @@ li {padding: 4px;}
   }
 
 }
-
 
 .hd {
   width: 100%;
