--- a/_layouts/sticky.html
+++ b/_layouts/sticky.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>{% if page.title %}{{ page.title }}</title>
-    {% include meta.html %}
+    {% include metasticky.html %}
     <meta name="keywords" content="Self Employment Tax, Self Employment, Estimated Tax">
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
