--- a/_layouts/sticky.html
+++ b/_layouts/sticky.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{% if page.title %}{{ page.title }}</title>
+    <title>{{ page.title }}</title>
     {% include metasticky.html %}
    
     <!--[if lt IE 9]>
@@ -12,9 +12,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet" />
     <link rel="manifest" href="/manifest.json">
-    <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Source+Sans+Pro" rel="stylesheet">
-     <link rel="shortcut icon" href="{{site.url}}/images/favicon.png" type="image/x-icon">
+    <link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.baseurl }}/feed.xml" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Source+Sans+Pro" rel="stylesheet" />
+     <link rel="shortcut icon" href="{{site.url}}/images/favicon.png" type="image/x-icon" /> 
       <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119970438-3"></script>
     <script>
