--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,9 +37,10 @@ comments: true
 			</div>
 			
 				<h1> {{post.title}} </h1>
+				 {% assign author = site.data.authors[page.author] %}
 			    <p class="byline">
-				<!-- Personal Info. -->
-				Written by <a href="{{site.url/about}}">{{ author.name }}</a>
+				<!-- Personal Info. -->	
+				 <a href="{{site.url/about}}">{{ author.name }}</a>
 			    </p>
 	
 				 {{content}}
