--- a/style.scss
+++ b/style.scss
@@ -240,6 +240,8 @@ ol > li {
 	margin-bottom: 5px;
 	
 	}
+
+
 .nav {
     width: 100%;
     height: 50px;
@@ -352,6 +354,16 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
     font-family: 'Source Sans Pro', sans-serif;
   }
 
+  byline {
+	font-size: 15px;
+	 padding: 10px;
+	
+	}
+	
+  date {
+	  font-size: 15px;
+	 padding: 10px;
+	}
   h1 {
     text-align: center;
     padding: 10px;
