--- a/style.scss
+++ b/style.scss
@@ -358,11 +358,12 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
 	font-size: 14.5px;
 	 padding: 10px;
 	
+	
 	}
 	
   date {
 	  font-size: 14.5px;
-	 padding: 10px;
+	   margin-left: 30px;
 	}
   h1 {
     text-align: center;
