--- a/style.scss
+++ b/style.scss
@@ -357,14 +357,10 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
   byline {
 	font-size: 14.5px;
 	 padding: 10px;
-	
+	align-items: center;
 	
 	}
-	
-  date {
-	  font-size: 14.5px;
-	   margin-left: 30px;
-	}
+
   h1 {
     text-align: center;
     padding: 10px;
