--- a/style.scss
+++ b/style.scss
@@ -397,11 +397,14 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
  .byline {
 	 display: flex;
 	 align-items: center;
-	
 	font-size: 14.5px;
-	 padding: 10px;
+	 padding: 10px;	
+	}
 	
-	}	
+.date {
+	margin-left: 5px;
+	padding: 2px 1px 0;
+	}
 ul {
 margin-bottom: 30px;
 padding: 8px;
