--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -5,7 +5,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'>
      <meta name="description" content="{{ site.description }}">
      <meta name="keywords" content="Self Employment Tax Calculator, Self Employment">
-    <meta name="author" content="{{ site.name }}">
+    <meta name="author" content="Raji Ayinla">
 
     {% if page.title %}
     <meta property="og:title" content="{{ page.title }}">
