--- a/_includes/metasticky.html
+++ b/_includes/metasticky.html
@@ -2,7 +2,7 @@
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'>
-    <meta name="author" content="{{ site.name }}">
+    <meta name="author" content="Raji Ayinla">
      <meta name="keywords" content="Self Employment Tax, Self Employment, Estimated Tax">
     {% if page.title %}
     <meta property="og:title" content="{{ page.title }}">
