--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -4,7 +4,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'>
      <meta name="description" content="{{ site.description }}">
-     <meta name="keywords" content="Self Employment Tax Calculator, Self Employment">
+     <meta name="keywords" content="Self Employment Tax Calculator, Self Employed Tax Calculator, Self Employment, Freelance Tax Calculator, Independant Contractor Tax Calculator, Contractor Tax Calculator">
     <meta name="author" content="Raji Ayinla">
 
     {% if page.title %}
